--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -8,16 +8,16 @@
 
 /*Custom Styles Here*/
 .navbar-link:hover {
+  @apply py-2 md:py-4;
   background: linear-gradient(to right, var(--tw-gradient-stops));
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: 100% 4px;
-  padding: 16px 0px;
   transition: 300ms;
 }
 
 .navbar-link {
+  @apply py-2 md:py-4;
   background-position: bottom left;
   background-size: 0% 4px;
-  padding: 16px 0px;
 }
